--- a/crudBlazor.ApiService/appsettings.json
+++ b/crudBlazor.ApiService/appsettings.json
@@ -8,5 +8,8 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=CrudDatabase.db"
+  },
+  "Jwt": {
+    "Secret": "s#2K8vG@qyJ$7Bd5rLcT!hN*X6zPeA4oFw9MuRtDnE3iSbYxVgWmCfHpQjZu1O"
   }
 }
