--- a/crudBlazor.ApiService/appsettings.json
+++ b/crudBlazor.ApiService/appsettings.json
@@ -10,6 +10,7 @@
     "DefaultConnection": "Data Source=CrudDatabase.db"
   },
   "Jwt": {
-    "Secret": "s#2K8vG@qyJ$7Bd5rLcT!hN*X6zPeA4oFw9MuRtDnE3iSbYxVgWmCfHpQjZu1O"
+    "Secret": "s#2K8vG@qyJ$7Bd5rLcT!hN*X6zPeA4oFw9MuRtDnE3iSbYxVgWmCfHpQjZu1O",
+    "RefreshTokenSecret": "ksndas%sdjan&bnbas$Sdasdb^asdj631S^dsdbbsjd&kasdnskj&ASdshud"
   }
 }
